# libnest2d

./: CMakeLists.txt
cmake_modules/: RequirePackage.cmake
include/libnest2d/: geometry_traits.hpp  geometry_traits_nfp.hpp  nester.hpp  parallel.hpp
include/libnest2d/backends/clipper/: CMakeLists.txt  geometries.hpp
include/libnest2d/optimizers/nlopt/: CMakeLists.txt  nlopt_boilerplate.hpp
include/libnest2d/placers/: bottomleftplacer.hpp  nfpplacer.hpp  placer_boilerplate.hpp
include/libnest2d/selections/: djd_heuristic.hpp  filler.hpp  firstfit.hpp  selection_boilerplate.hpp
tests/: CMakeLists.txt
